audit-service/k8s/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: audit-ms-mtls
  namespace: banking
spec:
  selector:
    matchLabels:
      app: audit-ms
  mtls:
    mode: STRICT
