audit-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-ms
  namespace: banking
  labels:
    app: audit-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-ms
  template:
    metadata:
      labels:
        app: audit-ms
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port:   "9011"
        prometheus.io/path:   "/actuator/prometheus"
    spec:
      serviceAccountName: audit-ms-sa
      containers:
        - name: audit-ms
          image: rewabank/rewabank-audit-ms:latest
          ports:
            - containerPort: 9011
          resources:
            requests:
              memory: "256Mi"
              cpu:    "250m"
            limits:
              memory: "512Mi"
              cpu:    "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9011
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9011
            initialDelaySeconds: 30
            periodSeconds: 10
