audit-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: banking
  labels:
    app: audit-ms
spec:
  selector:
    app: audit-ms
  ports:
    - name: http
      port: 9011
      targetPort: 9011
  type: ClusterIP
